uxWeb/src/styles/events.css
.events {
  padding: 5rem 0;
  top: 240px;
  position: relative;
}

.container-events {
  
  margin: 0 auto;
  padding: 0 0rem;
  height: 140vh;
}

.no-scrollbar {
  scrollbar-width: none;
}

.no-scrollbar::-webkit-scrollbar {
  display: none; 
}

.grabbing {
  cursor: grabbing;
  cursor: -webkit-grabbing;
}




.event-card {
  background: #FFFCF5;
  border-radius: 50px;
  box-shadow: 
    20px 20px 30px 0px #98979580,
    -20px -20px 30px 0px #FFFFFF;

  overflow: hidden;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 4rem;
}

.event-category-title {
  margin-top: 94px;
  margin-left: 139px;
}

.event-upcoming-content {
  width: 218px;
  height: 216px;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
}

.event-prev-content {
  width: 386px;
  height: 452px;

  display: flex;
  flex-direction: column;

  justify-content: space-between;
}

.event-btn {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 5px;
  padding-bottom: 5px;
  border-color: #00022B;
  border-width: 1px;
  border-radius:20px;
  width: 7rem;
  height: 25px;
  font-weight: 600;
  font-size: 12px;
  line-height: 100%;
  letter-spacing: 0%;
}

.event-title {
  font-size: 32px;
  font-weight: 600;
  font-family: "BR Firma", sans-serif;
  line-height: 100%;
  letter-spacing: 0px;
  margin-bottom: 0.75rem;
}

.event-title-colour {
  background: linear-gradient(to right, #A3280C, #657F95);
  background-clip: border-box;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.event-description {
  font-family: "BR Firma", sans-serif;
  font-size: 12px;
  font-weight: 400;
  line-height: 120%;
  letter-spacing: 0px;
  color: #000000;
}

@media (max-width: 1000px) {
  .event-category-title {
    margin-left: 5%;
  }
}

@media (min-width: 2700px) {
  .event-category-title {
    margin-left: 20%;
  }
}

